# tmode

./: Cargo.toml  LICENSE  README.md
ref/: adf.txt  ansi.txt  avt0.txt  avt0plus.txt  idf.txt  pcb.txt  sauce.md  syncronet_ctrl_a.txt  tundra.txt  xbin.txt
src/: ascii.rs  bytes.rs  lib.rs  sauce.rs  string.rs
src/font/: error.rs  includes.rs  mod.rs
src/render/: color.rs  image.rs  mod.rs
src/sauce/: aspect_ratio.rs  datatype.rs  error.rs  filetype.rs  letter_spacing.rs  mod.rs
