[package]
name = "textmode"
version = "0.0.1"
authors = ["Andy Herbert <andy.herbert@gmail.com>"]
edition = "2018"
description = "Textmode art interpretor, library, and tools."

[dependencies]
clap = "^2.33.1"
serde = {version = "^1.0.110", features = ["derive"]}
serde_json = "^1.0.53"
csv = "^1.1.3"
regex = "^1.3.7"
image = "^0.23.4"

[[bin]]
name = "tmode"
path = "src/bin/tmode.rs"
