[package]
name = "tmode"
version = "0.0.1"
authors = ["Andy Herbert <andy.herbert@gmail.com>"]
edition = "2018"
description = "Textmode art interpretor, library, and tools."

[dependencies]
clap = "^2.33"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
csv = "^1.1"
regex = "^1.3"
image = "^0.23"
chrono = "^0.4"
png = "^0.17"
wild = "^2.0"

[[bin]]
name = "tmode"
path = "src/bin/tmode/bin.rs"
